Crop_Blight as Stand-alone MOD
Makes crop_blight a stand-alone MOD and allows other mods to be compatible with crop_blight without requiring custom edits to the crop_blight MOD.

--- a/mods/mt_cc_nodes/mod.conf
+++ b/mods/mt_cc_nodes/mod.conf
@@ -1,4 +1,4 @@
 name = mt_cc_nodes
 depends = default
-optional_depends = moreblocks
+optional_depends = moreblocks, crop_blight
 description = MISC nodes for Minetest Carpenter Carbone
