--- a/mods/oil_separation/mod.conf
+++ b/mods/oil_separation/mod.conf
@@ -1,4 +1,4 @@
 name = oil_separation
-depends = default, bucket, farming, flowers, fire
-optional_depends = strainer, moreblocks
+depends = default, bucket, farming, fire,
+optional_depends = strainer, moreblocks, crop_blight
 description = Creates a new liquid, oil, and adds a system for extracting oil from farming seeds.
